--- a/stake.css
+++ b/stake.css
@@ -34,6 +34,12 @@ body {
     align-items: center;
 }
 
+.fixed-left img {
+    height: 14px;
+    width: auto;
+    margin-right: 5px;
+}
+
 .fl-head {
     display: flex;
     width: 100%;
@@ -41,7 +47,12 @@ body {
     justify-content: space-around;
     align-items: center;
     box-shadow: -2px 3px 7px black;
-    font-size: 15px;
+    font-size: 14px;
+}
+
+.fl-head span {
+    display: flex;
+    align-items: center;
 }
 
 .fl-body {
@@ -103,6 +114,7 @@ body {
     justify-content: center;
     cursor: pointer;
 }
+
 .fl-dd-element:is(:hover, .fl-dropdown-active) {
     background-color: #071824;
 }
@@ -124,10 +136,22 @@ body {
     width: 5px;
     position: relative; left: 20px;
 }
+
 .fl-body::-webkit-scrollbar-track {
     background-color: #0F212E;
 }
+
 .fl-body::-webkit-scrollbar-thumb {
     border-radius: 25px;
     background-color: #2E4552;
+}
+
+/*MAIN BETTING SECTION*/
+
+.odds-page {
+    flex-grow: 1;
+    background-color: #1B2D38;
+    width: 100%;
+    height: 100vh;
+    margin-left: calc(20% - 20px);
 }
