--- a/stake.css
+++ b/stake.css
@@ -5,7 +5,6 @@
     text-decoration: none;
     font-family: 'Poppins', Courier, monospace;
     list-style: none;
-    color: white;
 }
 
 body {
@@ -18,6 +17,13 @@ body {
 .stake-demo {
     display: flex;
     width: 100%;
+    color: white;
+}
+
+.stake-demo img {
+    height: 14px;
+    width: auto;
+    margin-right: 5px;
 }
 
 /*FIXED LEFT SIDE BAR*/
@@ -31,13 +37,6 @@ body {
     top: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-.fixed-left img {
-    height: 14px;
-    width: auto;
-    margin-right: 5px;
 }
 
 .fl-head {
@@ -56,12 +55,10 @@ body {
 }
 
 .fl-body {
-    margin-top: 30px;
     width: 92%;
     margin-left: 8%;
     font-size: 14px;
     height: calc(100% - 70px);
-    overflow-x: hidden;
     overflow-y: auto;
 }
 
@@ -81,6 +78,10 @@ body {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+}
+
+.fl-casino {
+    margin-top: 30px;
 }
 
 .fl-main:hover span {
@@ -111,12 +112,17 @@ body {
     border-radius: 25px;
     display: flex;
     align-items: center;
-    justify-content: center;
     cursor: pointer;
 }
 
 .fl-dd-element:is(:hover, .fl-dropdown-active) {
     background-color: #071824;
+}
+
+.fl-dd-element span {
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .fl-dd-header {
@@ -133,7 +139,7 @@ body {
 }
 
 .fl-body::-webkit-scrollbar {
-    width: 5px;
+    width: 6px;
     position: relative; left: 20px;
 }
 
@@ -145,6 +151,107 @@ body {
     border-radius: 25px;
     background-color: #2E4552;
 }
+
+.fl-blog {
+    margin-top: 10px;
+}
+
+.fl-extra {
+    width: 100%;
+    height: 40px;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.fl-extra:hover {
+    background-color: #071824;
+}
+
+.fl-extra:hover .text {
+    margin-left: 10px;
+    transition: all 0.2s linear;
+}
+
+.fl-select-lang {
+    margin-bottom: 25px;
+    line-height: 14px;
+}
+
+.fl-select-lang img {
+    margin-right: 7px;
+}
+
+.select {
+    display: flex;
+    align-items: center;
+}
+
+.select span {
+    display: flex;
+    align-items: center;
+}
+
+.select i {
+    margin-left: 10px;
+}
+
+.select-dropdown {
+    display: none;
+    font-size: 14px;
+    width: 135px;
+    height: 130px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: white;
+    color: #0F212E;
+    border-radius: 4px;
+    margin-top: 15px;
+}
+
+.lang-dd-active {
+    display: block;
+}
+
+.lang-options {
+    height: 32px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.lang-options span {
+    margin-left: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.lang-options:hover {
+    background-color: #E6EAF3;
+}
+
+.select-dropdown .active-lang {
+    color: #1574E1;
+}
+
+.select-dropdown::-webkit-scrollbar {
+    width: 6px;
+    position: relative; left: 20px;
+}
+
+.select-dropdown::-webkit-scrollbar-track {
+    background-color: white;
+    border-radius: 25px;
+}
+
+.select-dropdown::-webkit-scrollbar-thumb {
+    border-radius: 25px;
+    background-color: #2E4552;
+}
+
+
 
 /*MAIN BETTING SECTION*/
 
