--- a/stake.css
+++ b/stake.css
@@ -437,6 +437,8 @@ i {
 .w-option span {
     display: flex;
     align-items: center;
+    line-height: 14px;
+    width: 73px;
 }
 
 .w-option:hover {
