--- a/stake.css
+++ b/stake.css
@@ -1143,6 +1143,7 @@ i {
 }
 
 .bet-count {
+    display: none;
     padding: 0px 8px;
     border-radius: 20px;
     background-color: #4290E7;
@@ -1312,10 +1313,23 @@ i {
 .games-booked {
     height: calc(100vh - 300px);
     width: 100%;
+    overflow-y: auto;
+}
+
+.games-booked::-webkit-scrollbar {
+    width: 6px;
+}
+
+.games-booked::-webkit-scrollbar-track {
+    background-color: #0F202F;
+}
+
+.games-booked::-webkit-scrollbar-thumb {
+    border-radius: 25px;
+    background-color: #2E4453;
 }
 
 .empty-betslip {
-    display: none;
     width: 100%;
     height: 100%;
     flex-direction: column;
@@ -1368,8 +1382,8 @@ i {
     margin-top: 10px;
 }
 
-
 .match-cards-container {
+    display: none;
     width: 92%;
     margin: 0 auto;
 }
@@ -1474,4 +1488,12 @@ i {
 
 .s-dollars span {
     margin-right: 5px;
+}
+
+.gb-active .match-cards-container {
+    display: block;
+}
+
+.gb-active .empty-betslip {
+    display: none;
 }
